--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,7 @@
         "assets/profile.png",
         "inject.js",
         "assets/send.png",
-        "assets/chatbot.png",
+        "assets/chatbot1.png",
         "assets/cancel.png",
         "assets/bin.png",
         "assets/cpy.png"
