made prompt better and other changes

--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,8 @@
         "assets/chatbot1.png",
         "assets/cancel.png",
         "assets/bin.png",
-        "assets/cpy.png"
+        "assets/cpy.png",
+        "assets/here.jpg"
       ],
       "matches": [
         "<all_urls>"
